# PhysDock

./: .gitignore  LICENSE  README.md  env_diffdock.yml  env_physdock.yml  pyproject.toml  requirements.txt  setup_diffdock.sh
configs/: kras_g12c.yaml
data/ligands/: kras_g12c_ligands.csv
data/processed/: 5F2E_5UT.sdf  5F2E_5UT_clean.sdf  5V9U_91S.sdf  5V9U_91S_clean.sdf  6OIM_MOV.sdf  6UT0_M1X.sdf  6UT0_M1X_clean.sdf  target_prep.json
notebooks/: 01_quickstart.ipynb
physdock/: __init__.py  chem.py  cofold_boltz.py  config.py  docking_diffdock.py  ensemble.py  evaluate.py  physics_openmm.py  receptor.py  report.py  utils.py
results/boltz/: boltz.csv
results/chem/: chem_gate.csv
results/diffdock/: poses.csv
results/ensemble/: ensemble.csv
results/physics/: physics.csv
results/report/: merged.csv  report.md  summary.json
results/report/figures/overlays/poses/: adagrasib_pose_2.92A.sdf  sotorasib_pose_1.19A.sdf
scripts/: 00_setup_check.py  01_prepare_target.py  02_chem_gate.py  03_run_diffdock.py  04_run_boltz.py  05_physics_rescore.py  06_ensemble_analysis.py  07_evaluate_and_report.py  fetch_chembl_affinities.py  run_all.sh
